# freqtrade-strategy-analysis

./: .gitignore  Pipfile  Readme.md  docker-compose.yml  pyproject.toml  run_backtesting.sh  run_fetch_pairs.ps1  run_fetch_pairs.sh  run_fetch_strategies.ps1  run_fetch_strategies.sh
docs/: API_DOCUMENTATION.md  API_INTEGRATION_GUIDE.md  DATA_FETCHING_README.md  README_API_DOCS.md  api-types.ts
ft_userdata/: app.py  backtesting.py  backtesting_pairs.txt  db.py  docker-compose.yml  errors.txt  fetch_strategies.py  log_analyze.py  process_backtesting.py  process_strategies.py
server/: Dockerfile  app.py  background_services.py  backtesting.py  celery_service.py  db.py  fetch_pairs_from_remote.py  fetch_strategies_from_github.py  models.py  pairs.py  requirements.txt  schemas.py  services.py  strategies.py  strategy_groups.py  test.py
server/routes/: backtesting.py  pairs.py  strategies.py  strategy_groups.py
server/services/: background_services.py  celery_service.py  services.py
server/strategies/: CombinedBinHAndCluc.py  DMI_3EMA_PP.py  HyperStra_GSN_SMAOnly.py  Minmax.py  TenderEnter.py  ichiV1.py
ui/: Dockerfile  nginx.conf  package-lock.json  package.json
ui/public/: index.html
ui/src/: App.scss  App.tsx
vui/: README.md
vui/app/: page.tsx
vui/components/: bot-table.tsx  create-pair-group-dialog.tsx  performance-chart.tsx  sidebar.tsx
vui/lib/: adapters.ts  api-client.ts  mock-data.ts
vui/types/: index.ts
web/app/: layout.tsx
web/components/: api-test.tsx  create-bot-modal.tsx  stat-card.tsx  trade-history-table.tsx
web/hooks/: use-api.ts
(+27 files in other folders)
